load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "substring",
    srcs = ["src/lib.rs"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "substring_test",
    srcs = ["src/lib.rs"],
    deps = all_crate_deps(normal = True),
)

platform(
    name = "aarch64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
        "@zig_sdk//libc:musl",
    ],
)
